--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     #stylebody {    
         text-align: center;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        background-color: cadetblue;
+        background-color: white;
         
     }
 </style>
