--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="glass-container">
         <div class="glass-content">
-            <h1>Pre Mid Term Exam</h1>
+            <h1>Mid Term Exam</h1>
 
             <div class="name">
                 <input type="text" placeholder="Enter your Name" id="name">
