Added Last Updated Section and Updated title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>✅ Pre Mid Term - Updated</title>
+    <title>✅ Post Mid Term - Updated</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -86,6 +86,7 @@
             <p id="totalMainPercentage"></p>
             <h1 id="totalCombinedPercentage"></h1>
             <p style="background-color: aliceblue;">To visit the original Analysis Website visit <a href="analysis/index.html">This site</a></p>
+            <p style="background-color: aliceblue;">Last updated on: 2.10.2024</p>
         </div>
         
     </div>
