Update index.html to PreMidTerm2024

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>✅ Post Mid Term - Updated</title>
+    <title>✅ Pre Mid Term - Updated (2024)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
 <body>
     <div class="glass-container">
         <div class="glass-content">
-            <h1>Mid Term Exam</h1>
+            <h1>Pre Mid Term Exam</h1>
 
             <div class="name">
                 <input type="text" placeholder="Enter your Name" id="name">
