Update index.html to PreMidTerm2024

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p id="totalMainPercentage"></p>
             <h1 id="totalCombinedPercentage"></h1>
             <p style="background-color: aliceblue;">To visit the original Analysis Website visit <a href="analysis/index.html">This site</a></p>
-            <p style="background-color: aliceblue;">Last updated on: 2.10.2024</p>
+            <p style="background-color: aliceblue;">Last updated on: 18 July 2024</p>
         </div>
         
     </div>
